# mcp-observer-server

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/mcp_monitor_server/: __init__.py  __main__.py  resources.py  server.py  server_bak.py  server_v2.py  server_v3.py  subscriptions.py  watcher.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_file_monitoring.py  test_mcpignore.py  test_resources.py  test_subscriptions.py
