[project]
name = "mcp-monitor-server"
version = "0.1.0"
description = "An MCP server that monitors system events, such as file changes, and sends notifications to an MCP client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "mcp[cli]>=0.1.0",
]

[project.scripts]
mcp-monitor-server = "mcp_monitor_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["mcp_monitor_server"]

[tool.pytest]
testpaths = ["tests"]